--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <table class="main" style="width: 100%;">
       <tr>
         <td style="text-align: center;">
-          <img src="C:\Users\nches\Desktop\HTML- Personal Site\Coach Outlet Email\img\coach-logo.png" style="text-align: center; width: 175px;" alt="">
+          <img src="images\coach-logo.png" style="text-align: center; width: 175px;" alt="">
         </td>
       </tr>
 
@@ -60,7 +60,7 @@
         <td style="text-align: center;
       padding: 0px;">
           <a href="https://click.c.coachoutlet.com/?qs=0c574efae230def392191086a8e41c60ad668682330fcfbc3195b2843ad71dc563663740652559c14e2e79c1b9fbe043f7d13f750249518da02ab1fa76c954cf"><img
-              src="C:\Users\nches\Desktop\HTML- Personal Site\Coach Outlet Email\img\girl-shades2.gif" alt="Beach sunglasses"></a>
+              src="images\girl-shades2.gif" alt="Beach sunglasses"></a>
 
         </td>
       </tr>
@@ -84,7 +84,7 @@
                     <td>
                       <a
                         href="https://www.coachoutlet.com/products/disney-mickey-mouse-x-keith-haring-kisslock-bag/4720-B4%2FM2.html?rrec=true&ctk=_marketing8_rr_520_2958&utm_versions=1&utm_term=Amperity_COHNA_Outlet_US_LowAOV_2xActiveBuyer&campaignid=20220629_WK52_OTL_4th_Of_July_Lock_Up_Certona_V2_Lock_Up&utm_campaign=20220629_WK52_OTL_4th_Of_July_Lock_Up_Certona_V2_Lock_Up&utm_source=SFMC&om_suv=9368285e766a8cbee1be426acf8728d7043b0a03358a8664f3902444a46b35fb&sfmc_id=130907711&utm_medium=em_mktg&mi_u=133690211&ogemh=9368285e766a8cbee1be426acf8728d7043b0a03358a8664f3902444a46b35fb&ogmap=EM|MKTG|SF||||OUTLET|20220629_WK52_OTL_4th_Of_July_Lock_Up_Certona_V2_Lock_Up"><img
-                          src="C:\Users\nches\Desktop\HTML- Personal Site\Coach Outlet Email\img\white-coach.png"></a>
+                          src="images\white-coach.png"></a>
                     </td>
                   </tr>
                 </table>
@@ -92,7 +92,7 @@
                   <tr>
                     <td>
                       <a href="https://click.c.coachoutlet.com/?qs=0c574efae230def3901baa13e057767d9a94d7268c6e808289f5799062e4a0d59013a5511c47fe316da42946150602c7adebb8f95fb71ed8be423e4240618047"><img
-                          src="C:\Users\nches\Desktop\HTML- Personal Site\Coach Outlet Email\img\rainbow-coach-purse.png"></a>
+                          src="images\rainbow-coach-purse.png"></a>
                     </td>
                   </tr>
                 </table>
@@ -108,7 +108,7 @@
                   <tr>
                     <td>
                       <a href="https://click.c.coachoutlet.com/?qs=0c574efae230def38102ef3fd7f5b09282e447560590041ee83b9ac007d8c8840acbc39505184c6ff808421b06632ad9b20109091984a2fe86e475184a0b8a9e"><img
-                          src="C:\Users\nches\Desktop\HTML- Personal Site\Coach Outlet Email\img\coach-apperal3.png"></a>
+                          src="images\coach-apperal3.png"></a>
                     </td>
                   </tr>
                 </table>
@@ -116,7 +116,7 @@
                   <tr>
                     <td>
                       <a href="https://click.c.coachoutlet.com/?qs=0c574efae230def3c1733694f8036fe6db4bc763fbbff27d9e88077f4a6abf0cbe66b1d194cd32ab893f53434ab9b3f1798f1df8ff6fe26e702f39cdf2557b28"><img
-                          src="C:\Users\nches\Desktop\HTML- Personal Site\Coach Outlet Email\img\coach-apperal4.png"></a>
+                          src="images\coach-apperal4.png"></a>
                     </td>
                   </tr>
 
@@ -137,7 +137,7 @@
       <tr>
         <td style="text-align: center;">
           <a href="https://click.c.coachoutlet.com/?qs=0c574efae230def3e941c33a706b9db84ed3a402a5a6980ff276067b6e258f4c065cc56cf204ec2e5e2c71f1ad5ce9c73730a063facdfb6cf9bd68f3c292a11a"><img
-              src="C:\Users\nches\Desktop\HTML- Personal Site\Coach Outlet Email\img\more-shops4.png" alt="More Shops"></a>
+              src="images\more-shops4.png" alt="More Shops"></a>
         </td>
       </tr>
 
